--- a/scripts/mmk2_nodebook.ipynb
+++ b/scripts/mmk2_nodebook.ipynb
@@ -6,9 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env MUJOCO_GL=egl\n",
-    "\n",
     "import os\n",
+    "import sys\n",
+    "\n",
+    "if sys.platform == 'linux':\n",
+    "    os.environ['MUJOCO_GL'] = 'egl'\n",
+    "    # os.environ['MUJOCO_GL'] = 'osmesa'\n",
+    "elif sys.platform == 'darwin':\n",
+    "    os.environ['MUJOCO_GL'] = 'glfw'\n",
+    "\n",
     "import mujoco\n",
     "import mediapy\n",
     "import numpy as np\n",
