--- a/scripts/mujoco_model_utils.ipynb
+++ b/scripts/mujoco_model_utils.ipynb
@@ -6,9 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env MUJOCO_GL=egl\n",
-    "\n",
     "import os\n",
+    "import sys\n",
+    "\n",
+    "if sys.platform == 'linux':\n",
+    "    os.environ['MUJOCO_GL'] = 'egl'\n",
+    "    # os.environ['MUJOCO_GL'] = 'osmesa'\n",
+    "elif sys.platform == 'darwin':\n",
+    "    os.environ['MUJOCO_GL'] = 'glfw'\n",
+    "\n",
     "import mujoco\n",
     "import numpy as np\n",
     "import mediapy as media\n",
@@ -52,7 +58,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pinocchio_env",
+   "display_name": "renderer",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
